--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -145,7 +145,7 @@ bind = $mainMod, R, exec, rofi -show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, U, togglesplit, # dwindle
 bind = $mainMod, N, exec, nemo
-bind= $mainMod, SPACE, exec, ~/.config/hypr/powermenu.sh
+bind= $mainMod, SPACE, exec, wlogout
 
 
 # Move focus with mainMod + arrow keys
