--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -215,3 +215,4 @@ windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
 windowrulev2 = noanim,class:^(xwaylandvideobridge)$
 windowrulev2 = nofocus,class:^(xwaylandvideobridge)$
 windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
+bindl = ,switch:Lid Switch, exec, swaylock
