--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -12,4 +12,8 @@ bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
+shell_integration no-cursor
+enable_audio_bell no
+linux_display_server wayland
+
 +cv02 +cv05 +cv09 +cv14 +ss04 +cv16 +cv31 +cv25 +cv26 +cv32 +cv28 +ss10 +zero +onum
