--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -10,7 +10,7 @@ print_info() {
     prin "${c1} Sys-Info       "
     info "${c5} ├─  Distro     " distro
     info "${c5} ├─  Kernel     " kernel
-    info "${c5} ├─  DE/WM      " wm
+    info "${c5} ├─  DE/WM      " de
     info "${c5} ├─ 󰍛 CPU        " cpu
     info "${c5} ├─ 󰍹 GPU        " gpu
     info "${c5} ├─ 󰅐 Up Time    " uptime
